system and bank module